--- a/client/src/components/profile/profileCard.css
+++ b/client/src/components/profile/profileCard.css
@@ -1,3 +1,28 @@
-card-wrapper{
-  
+.card-wrapper {
+  border: 3px solid limegreen;
+  width: min(100% - 2rem, 960px);
+  display: flex;
+}
+
+.profile-container {
+  border: 3px solid red;
+  padding: 1rem;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.profile-img {
+  border: 3px solid blue;
+  width: 8rem;
+  height: 8rem;
+  margin-top: 1rem;
+}
+
+.user {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  margin: 1rem 0rem;
+  line-height: 2rem;
 }
