--- a/client/src/components/search/searchBarStyles.css
+++ b/client/src/components/search/searchBarStyles.css
@@ -1,5 +1,6 @@
 .input-group {
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 .input {
@@ -8,4 +9,5 @@
 
 button {
   height: 20px;
+  margin-left: 40px;
 }
