--- a/client/src/components/match/matchHistory.css
+++ b/client/src/components/match/matchHistory.css
@@ -1,15 +1,24 @@
 .hist-wrapper {
-  border: 3px solid limegreen;
   width: min(100% - 2rem, 960px);
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
   margin-top: 25px;
+  color: white;
 }
 
 .hist-body {
-  border: 3px solid red;
+  background: rgba(74, 74, 74, 0.7);
+  backdrop-filter: blur(11px);
+  -webkit-backdrop-filter: blur(11px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   padding: 1rem;
   display: flex;
   flex-flow: column;
   align-content: center;
   justify-content: center;
+  line-height: 2rem;
+  text-align: center;
 }
