--- a/client/src/components/profile/profileCard.css
+++ b/client/src/components/profile/profileCard.css
@@ -1,11 +1,16 @@
 .card-wrapper {
-  border: 3px solid limegreen;
   width: min(100% - 2rem, 960px);
   display: flex;
+  color: white;
+  background: rgba(74, 74, 74, 0.7);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(11px);
+  -webkit-backdrop-filter: blur(11px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .profile-container {
-  border: 3px solid red;
   padding: 1rem;
   display: flex;
   flex-flow: column;
@@ -20,10 +25,11 @@
 }
 
 .user {
+  width: 100%;
   display: flex;
   flex-flow: column;
   align-items: center;
-  margin: 1rem 0rem;
+  margin: 1rem 2rem;
   line-height: 2rem;
 }
 
