--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,5 +1,12 @@
+#bg-img {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/animatetd-6011088.jpg");
+  background-position: left;
+  background-repeat: no-repeat;
+}
+
 .body-wrapper {
-  border: 5px solid limegreen;
   width: min(100% - 2rem, 960px);
   margin-inline: auto;
   display: flex;
