--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background-image: url("../images/animatetd-6011088.jpg");
-  background-position: left;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
