--- a/client/src/components/match/matchHistory.css
+++ b/client/src/components/match/matchHistory.css
@@ -1,5 +1,6 @@
 .hist-wrapper {
   width: min(100% - 2rem, 960px);
+  margin-inline: auto;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 20px;
@@ -9,7 +10,7 @@
 }
 
 .hist-body {
-  background: rgba(74, 74, 74, 0.7);
+  background: rgba(4, 4, 4, 0.7);
   backdrop-filter: blur(11px);
   -webkit-backdrop-filter: blur(11px);
   border-radius: 10px;
@@ -21,4 +22,10 @@
   justify-content: center;
   line-height: 2rem;
   text-align: center;
+}
+
+#placement {
+  font-weight: bold;
+  font-size: 2.5rem;
+  margin-top: 15px;
 }
